--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
